Add repo remote update date on card details, fix db config, front details

--- a/test/fixtures/repositories.yml
+++ b/test/fixtures/repositories.yml
@@ -4,10 +4,10 @@ one:
   stars: 1
   description: MyString
   url: MyString
-  name: MyString
+  name: Repository
 
 two:
   stars: 1
   description: MyString
   url: MyString
-  name: MyString
+  name: Repositories
